# ugc_sprint_2

./: .gitignore  README.md  setup.cfg
.github/workflows/: ci_ugc.yml
investigation/: .env.example  Makefile  docker-compose.elk.yaml  docker-compose.postgres.yaml  docker-compose.yaml  pyproject.toml
investigation/deploy/: logstash.conf
investigation/docker/: Dockerfile  postgres-entrypoint.sh
investigation/investigation_results/: README.md
investigation/locust_files/: locust_file.py
investigation/postgres_investigation/: generate_data.py
investigation/src/: log_conf.yaml  main.py
investigation/src/api/v1/core/: config.py
investigation/src/api/v1/db/: mongodb.py
investigation/src/api/v1/routers/: auth_util.py  router.py
investigation/src/api/v1/schemas/: schemas.py
investigation/src/api/v1/services/: activities_service.py
investigation/src/api/v1/utils/: generate_data.py  util.py
investigation/src/tests/: conftest.py  settings.py
investigation/src/tests/fixtures/: clients.py
investigation/src/tests/unit_tests/: test_ugc_endpoints.py
